--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -7,6 +7,4 @@ form {
 form input {
   background: #333;
   color: white;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
